unpackaged/main/default/objects/Activity/fields/Sub_Constituency__c.field-meta.xml
<CustomField>
    <fullName>Sub_Constituency__c</fullName>
    <label>Sub-Constituency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Climate - Global Climate</fullName>
            </value>
            <value>
                <fullName>Climate - Legal and Regulatory</fullName>
            </value>
            <value>
                <fullName>Development - Government</fullName>
            </value>
            <value>
                <fullName>Development - Institutional Giving</fullName>
            </value>
            <value>
                <fullName>Development - Major Gifts</fullName>
            </value>
            <value>
                <fullName>Development - Planned Giving Estates</fullName>
            </value>
            <value>
                <fullName>Development - Planned Giving Ospreys</fullName>
            </value>
            <value>
                <fullName>Development - Planned Giving Prospects</fullName>
            </value>
            <value>
                <fullName>EDFBIZ - Climate Corps</fullName>
            </value>
            <value>
                <fullName>EDFBIZ - Corporate Climate Leadership</fullName>
            </value>
            <value>
                <fullName>Global Strategy - China</fullName>
            </value>
            <value>
                <fullName>Global Strategy - Europe</fullName>
            </value>
            <value>
                <fullName>MarComm - Ambassador</fullName>
            </value>
            <value>
                <fullName>Membership - Catalyst Circle</fullName>
            </value>
            <value>
                <fullName>Oceans - Fishery Solutions Center</fullName>
            </value>
            <value>
                <fullName>Political Affairs - Advocacy Network</fullName>
            </value>
            <value>
                <fullName>Political Affairs - C4 Defend Our Future</fullName>
            </value>
            <value>
                <fullName>Political Affairs - C4 Moms Clean Air Force</fullName>
            </value>
            <value>
                <fullName>Political Affairs - Defend Our Future</fullName>
            </value>
            <value>
                <fullName>Political Affairs - Moms Clean Air Force</fullName>
            </value>
            <value>
                <fullName>Development - Planned Giving</fullName>
                <isActive>false</isActive>
                <label>Development - Planned Giving</label>
            </value>
            <value>
                <fullName>EDFBIZ - Energy and Innovation</fullName>
                <isActive>false</isActive>
                <label>EDFBIZ - Energy and Innovation</label>
            </value>
            <value>
                <fullName>EDFBIZ - Growth States</fullName>
                <isActive>false</isActive>
                <label>EDFBIZ - Growth States</label>
            </value>
            <value>
                <fullName>EDFBIZ - Supply Chain</fullName>
                <isActive>false</isActive>
                <label>EDFBIZ - Supply Chain</label>
            </value>
            <value>
                <fullName>EDFBIZ - Sustainable Finance</fullName>
                <isActive>false</isActive>
                <label>EDFBIZ - Sustainable Finance</label>
            </value>
            <value>
                <fullName>Ecosystems - Coastal</fullName>
                <isActive>false</isActive>
                <label>Ecosystems - Coastal</label>
            </value>
            <value>
                <fullName>Ecosystems - Habitats</fullName>
                <isActive>false</isActive>
                <label>Ecosystems - Habitats</label>
            </value>
            <value>
                <fullName>Ecosystems - Sustainable Agriculture</fullName>
                <isActive>false</isActive>
                <label>Ecosystems - Sustainable Agriculture</label>
            </value>
            <value>
                <fullName>Ecosystems - Water</fullName>
                <isActive>false</isActive>
                <label>Ecosystems - Water</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>