unpackaged/main/default/objects/Activity/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>Autopopulated by flow to indicate Team of Task/Event Assigned To.</description>
    <inlineHelpText>Team of Task/Event 'Assigned To' User</inlineHelpText>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Mission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>