unpackaged/main/default/objects/Activity/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact lookup. Used for donors/board members who participate in a meeting but are acting on behalf of EDF.</description>
    <inlineHelpText>Used for donors/board members who participate in a meeting but are acting on behalf of EDF.</inlineHelpText>
    <label>Primary Volunteer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Activities (Volunteer)</relationshipLabel>
    <relationshipName>Activities_Vol</relationshipName>
    <type>Lookup</type>
</CustomField>